# duckspec

./: AGENTS.md  Aikata.yaml  Duckspec.yaml  README.md  SPEC.md
aikata/: Aikata.yaml  AikataArchitecture.yaml  AikataProject.yaml  AikataProjectSettings.yaml  AikataUI.yaml  Function.yaml  Project.yaml  Recipe.yaml  Settings.yaml  Software.yaml  Term.yaml  UserInterface.yaml  View.yaml  Window.yaml  aikata.md  aikata.yaml  application.yaml  project.yaml  property.yaml  recipe.yaml  settings.yaml  term.yaml
aikata/aikata_arch/: Application.yaml  DesignPattern.yaml  Function.yaml  Script.yaml  Server.yaml  ShellScript.yaml  Singleton.yaml  Software.yaml  SoftwareComponent.yaml
aikata/aikata_ui/: Button.yaml  Checkbox.yaml  DatePicker.yaml  Label.yaml  ListView.yaml  LongText.yaml  NumberInput.yaml  RadioButton.yaml  SelectInput.yaml  Slider.yaml  Spinner.yaml  TableView.yaml  Toggle.yaml  UserInterfaceElement.yaml  View.yaml
duckspec/: DuckArch.yaml  DuckVersion.yaml  DuckspecArchitecture.yaml  DuckspecProject.yaml  DuckspecProjectSettings.yaml  Goal.yaml  Guideline.yaml  Project.yaml  Property.yaml  Recipe.yaml  Settings.yaml  Term.yaml  Test.yaml
duckspec/duckspec_arch/: API.yaml  ConfigFile.yaml  ContainerImage.yaml  Database.yaml  DesignPattern.yaml  DuckCrypto.yaml  DuckFilesystem.yaml  DuckUI.yaml  DuckspecUI.yaml  Extension.yaml  Field.yaml  Function.yaml  Hook.yaml  Middleware.yaml  Module.yaml  Notification.yaml  (+18 more)
ducktools/: DuckTools.yaml  pyproject.toml
ducktools/ducktools/: DuckToolsApp.yaml
ducktools/src/ducktools/: cli.py  mcp_server.py  resolver.py
(+35 files in other folders)
